forum/skins/default/media/style/style.css
@import "jquery.autocomplete.css";

body {
    /*overflow-y: scroll;
    height: 100%; */
    background: none repeat scroll 0 0 #FFFFFF;
    color: #000000;
    font-family: sans-serif;
    font-size: 12px;
    line-height: 150%;
    margin: 0;
    padding: 0;
}

div {
    margin: 0 auto;
    padding: 0;
}

h1, h2, h3, ul, li, form, img, p {
    border: medium none;
    margin: 0;
    padding: 0;
}

label {
    vertical-align: middle;
}

.login label {
    display: block;
}

.login .form-row-vertical {
    margin-bottom: 8px;
}

hr {
    border-color: #CCCCCE -moz-use-text-color -moz-use-text-color;
    border-right: medium none;
    border-style: dashed none none;
    border-width: 1px medium medium;
}

input, select {
    font-family: Trebuchet MS, "segoe ui", Helvetica, "Microsoft YaHei", Tahoma, Verdana, MingLiu, PMingLiu, Arial, sans-serif;
    vertical-align: middle;
}

p {
    font-size: 13px;
    line-height: 140%;
    margin-bottom: 13px;
}

a {
    color: #3060A8;
    text-decoration: none;
}

.clear {
  clear: both;
  width: 0px;
  height: 0px;
}

.badges a {
    color: #763333;
    text-decoration: underline;
}

a:hover {
    text-decoration: underline;
}

.tright {
    text-align: right;
}

.spacer3 {
    clear: both;
    height: 30px;
    line-height: 30px;
    visibility: hidden;
}

h1 {
    font-size: 160%;
    padding: 5px 0;
    line-height: 110%;
    overflow: hidden;
}

h2 {
    font-size: 140%;
    padding: 3px 0;
    line-height: 110%;
}

h3 {
    font-size: 120%;
    padding: 3px 0;
    line-height: 110%;
}

ul {
    list-style: disc outside none;
    margin-bottom: 1em;
    margin-left: 20px;
    padding-left: 0;
}

ol {
    list-style: decimal outside none;
    margin-bottom: 1em;
    margin-left: 30px;
    padding-left: 0;
}

td ul {
    vertical-align: middle;
}

li input {
    margin: 3px 3px 4px;
}

pre {
    background-color: #F5F5F5;
    font-family: Consolas, Monaco, Liberation Mono, Lucida Console, Monospace;
    font-size: 100%;
    margin-bottom: 10px;
    overflow: auto;
    padding-left: 5px;
    padding-top: 5px;
    width: 580px;
}

code {
    font-family: Consolas, Monaco, Liberation Mono, Lucida Console, Monospace;
    font-size: 100%;
    white-space: pre-wrap;
}

blockquote {
    background-color: #F5F5F5;
    margin-bottom: 10px;
    margin-right: 15px;
    padding: 10px 0 1px 10px;
    max-width: 650px;
}

blockquote blockquote {
    margin: 0;
    padding: 0;
}

#wrapper, #announcement {
    margin: auto;
    padding: 0;
    width: 990px;
    background-color: #FFF;
}

#roof {
    width: 990px;
}

#room {
    background-color: #FFFFFF;
    border-bottom: 1px solid #777777;
    padding: 10px 0;
}

#CALeft {
    float: left;
    position: relative;
    width: 740px;
}

#CARight {
    float: right;
    width: 240px;
}

#CAFull {
    float: left;
    padding: 0 5px;
    width: 950px;
}

#ground {
    background: none repeat scroll 0 0 #BDCCED;
    border-top: 1px solid #000000;
    padding-bottom: 0;
    padding-top: 6px;
    text-align: center;
    width: 990px;
}

#top {
    float: right;
    padding: 3px;
    text-align: right;
    width: 500px;
}

#top a {
    color: #333333;
    font-size: 12px;
    height: 35px;
    margin-left: 20px;
    text-align: right;
    text-decoration: underline;
}

#logo {
    float: left;
    padding: 5px 0 0;
}

#nav {
    float: right;
    margin: 35px 0px 0px 0px;
    width: 750px;
}

#nav a {
    background-color: #E5EBF8;
    border-color: #888888 #888888 -moz-use-text-color;
    border-style: solid solid none;
    border-width: 1px 1px medium;
    color: #333333;
    display: block;
    float: left;
    font-size: 14px;
    font-weight: 400;
    height: 25px;
    line-height: 30px;
    margin-left: 10px;
    padding: 0 12px 3px;
    text-decoration: none;
}

#nav a:hover {
    text-decoration: underline;
}

#nav a.on {
    background: none repeat scroll 0 0 #356FCB;
    border: 1px solid #356FCB;
    color: #FFFFFF;
    font-weight: 600;
    height: 24px;
    line-height: 28px;
    text-decoration: none;
}

#nav a#nav_ask {
    float: right;
    color: #B02B2C;
    font-size: 14px;
    font-weight: bold;
    text-decoration: none;
}

#nav a#nav_ask:hover {
    text-decoration: underline;
}

#nav a#nav_ask.on {
   color: #FFFFFF;
}

#searchBar {
    text-align: center;
    background-color: #B6C4E2;
    border-color: #EEEEEC #A9ACA5 #BABDB6 #EEEEEC;
    border-style: solid;
    border-width: 1px;
    padding: 4px 0 0;
    width: 988px;
}

#searchBar .content {
}

#searchBar .searchInput {
    border: 0px;
    padding: 3px;
    font-size: 13px;
    height: 18px;
    width: 400px;
}

#searchBar .searchBtn {
    font-size: 14px;
    height: 26px;
    width: 80px;
}

#searchBar .options {
    color: #333333;
    font-size: 120%;
    padding: 3px 0;
}

#searchBar .options input {
    margin: 0 3px 0 15px;
}

#searchBar .options input:hover {
    cursor: pointer;
}

#listA {
    background-color: #FFFFFF;
    float: left;
    padding: 0 0;
    width: 100%;
}

.thousand {
    color: orange;
}

.short-summary {
    border-top: 1px dotted #CCCCCE;
    float: left;
    overflow: hidden;
    padding: 3px 0px 5px 0;
    position: relative;
    width: 740px;
}

#listA .short-summary:first-of-type {
    border-top: 0;
}

.user-stats-table .short-summary {
    width: 764px;
}

.short-summary h2 a {
    color: #2A5594;
    font-family: "Trebuchet MS", "segoe ui", arial, sans-serif;
    font-size: 17px;
}

.short-summary .userinfo {
    color: #666666;
    float: right;
    margin-top: 8px;
}

.userinfo a, a.userinfo {
    color: #3060A8;
}

.short-summary .counts {
    float: left;
    margin-right: 0px;
    margin-top: 4px;
    padding-right: 2px;
}

.short-summary .counts .item-count {
    font-size: 17px;
    font-weight: bold;
}

.short-summary .question-summary-wrapper {
  float: right;
  width: 565px;
}
/* ... */

